syntax = "proto3";
package proto;
import "google/api/annotations.proto";
service UserFind {
    rpc SayUserFind(UserFindRequest) returns (UserFindResponse) {
        option (google.api.http) = {
            get: "/user_find"
          //  body: "*"
        };
    }
}
message UserFindRequest {
    string referer = 1;
}
message UserFindResponse {
    string message = 1;
}